fixed scrolling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,10 @@ p {
   overflow-x: hidden;
 }
 
+#skrollr-body {
+  height: auto;
+}
+
 body {
   /*height: 100vh;*/
 }
